# video-summarizer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  INSTALL.md  README.md  README_EN.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/asr/: whisper.py
app/core/: config.py  models.py  pipeline.py
app/llm/: __init__.py  base.py  claude.py  openai_proto.py
app/storage/: db.py  files.py
app/vision/: frames.py
app/web/: app.js  index.html  style.css
cli/: __init__.py  __main__.py  commands.py  output.py
core/: config.py  main.py  models.py  pipeline.py  review_doc.py
core/api/: routes.py
core/asr/: __init__.py  base.py  cloud.py  local.py  whisper.py
core/llm/: __init__.py  base.py  claude.py  openai_proto.py  prompt_store.py  prompts.py
core/storage/: db.py  files.py
core/templates/: review_doc.html
core/vision/: frames.py
core/web/: app.js  index.html  style.css
docs/: phase01.md  phase02.md  phase03.md  phase04.md  phase05.md  roadmap.md  spec.md
scripts/: dev.sh  self_check.sh
skill/: SKILL.md
skill/scripts/: check-update.sh  status.sh  summarize.sh  version.sh
tests/: test_api.py  test_asr_providers.py  test_integration.py  test_llm.py  test_llm_fallback.py  test_models.py  test_path_traversal.py  test_platforms.py  test_retry_button.py  test_review_cards.py  test_review_doc_api.py  test_review_doc_e2e.py  test_skill.py  test_storage.py  test_vision.py  test_web.py  test_web_e2e.py  test_whisper.py
whisper-server/: Dockerfile  docker-compose.yml  server.py
(+81 files in other folders)
