[project]
name = "bilibili-learning-helper"
version = "0.1.0"
description = "Bilibili/YouTube video summarizer powered by Whisper ASR + LLM, with batch processing, multimodal analysis, and Obsidian export"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "anthropic>=0.40.0",
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
